# jt-budget

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
budget-app/: Cargo.toml  theme.toml
budget-app/src/: app.rs  cli.rs  lib.rs  locator.rs  logging.rs  main.rs  repository.rs  setup.rs  state.rs  ui.rs
budget-app/src/app/: document.rs  editor.rs  failure.rs  guided.rs  mod.rs  navigation.rs  persistence.rs  tests.rs
budget-app/src/repository/: fs_store.rs  git_repo.rs  mod.rs  month_store.rs
budget-app/src/setup/: command.rs  github.rs  mod.rs  prompts.rs
budget-app/src/snapshots/: jt_budget__ui__tests__editor_snapshot.snap  jt_budget__ui__tests__editor_snapshot_105x48.snap  jt_budget__ui__tests__editor_snapshot_210x48.snap  jt_budget__ui__tests__editor_snapshot_80x24.snap  jt_budget__ui__tests__guided_snapshot.snap  jt_budget__ui__tests__guided_snapshot_105x48.snap  jt_budget__ui__tests__guided_snapshot_210x48.snap  jt_budget__ui__tests__guided_snapshot_80x24.snap  jt_budget__ui__tests__navigation_snapshot.snap  jt_budget__ui__tests__navigation_snapshot_105x48.snap  jt_budget__ui__tests__navigation_snapshot_210x48.snap  jt_budget__ui__tests__navigation_snapshot_80x24.snap
budget-app/src/state/: field_catalog.rs  mod.rs  money_input.rs  route_state.rs
budget-app/src/ui/: editor.rs  failure.rs  guided.rs  layout.rs  mod.rs  navigation.rs  test_support.rs  tests.rs  theme.rs  widgets.rs
budget-app/src/ui/editor/: section_table.rs
budget-app/src/ui/snapshots/: jt_budget__ui__tests__editor_snapshot.snap  jt_budget__ui__tests__editor_snapshot_105x48.snap  jt_budget__ui__tests__editor_snapshot_210x48.snap  jt_budget__ui__tests__editor_snapshot_80x24.snap  jt_budget__ui__tests__guided_snapshot.snap  jt_budget__ui__tests__guided_snapshot_105x48.snap  jt_budget__ui__tests__guided_snapshot_210x48.snap  jt_budget__ui__tests__guided_snapshot_80x24.snap  jt_budget__ui__tests__navigation_snapshot.snap  jt_budget__ui__tests__navigation_snapshot_105x48.snap  jt_budget__ui__tests__navigation_snapshot_210x48.snap  jt_budget__ui__tests__navigation_snapshot_80x24.snap
budget-core/: Cargo.toml
budget-core/src/: config.rs  error.rs  lib.rs  money.rs  month.rs
budget-core/src/month/: calculation.rs  document.rs  id.rs  mod.rs  projection.rs
docs/: app-env.md  calc-rules.md  cs-espresso.md  mvp-brief.md  public-release-readiness.md  rust-bp.md  state-machine-lifecycle.md  tech-stack.md  tui-bp.md
docs/swarm-reviews/: 2026-04-01_144849_tui-colour-swarm-review.md  2026-04-01_tui-review.md  2026-04-02_112325_rust-style-best-practices-review.md  2026-04-02_112800_large-module-maintainability-addendum.md
docs/targeted-reviews/: 2026-04-07_large-rust-modules-review.md
