[workspace]
members = ["budget-app", "budget-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoelTodd/jt-budget"
rust-version = "1.85"
version = "0.4.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fs4 = "0.13.1"
insta = { version = "1.43.2", features = ["redactions"] }
proptest = "1.8.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "std"] }
