[package]
name = "jt-budget"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
budget-core = { path = "../budget-core" }
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
fs4.workspace = true
ratatui.workspace = true
serde.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
