[package]
name = "jt-budget"
version.workspace = true
edition.workspace = true
description = "Terminal-first monthly budgeting app with Git-backed budget files"
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["budget", "finance", "tui", "terminal"]
categories = ["command-line-utilities", "finance"]

[dependencies]
anyhow.workspace = true
budget-core = { path = "../budget-core" }
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
fs4.workspace = true
ratatui.workspace = true
serde.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
